server/commit_log.txt
╭───────────────────────────────────────╮
│ 🥊 lefthook v1.13.6  hook: pre-commit │
╰───────────────────────────────────────╯
warning: `VIRTUAL_ENV=D:/workspace/indie/feedalyze/server/.venv` does not match the project environment path `.venv` and will be ignored; use `--active` to target the active environment instead
┃  backend-linter ❯ 

fix end of files.........................................................Passed
- hook id: end-of-file-fixer
- duration: 0.45s
check json...............................................................Passed
- hook id: check-json
- duration: 0.47s
check yaml...............................................................Passed
- hook id: check-yaml
- duration: 2.72s
check toml...............................................................Passed
- hook id: check-toml
- duration: 0.17s
ruff.....................................................................Failed
- hook id: ruff
- duration: 0.05s
- exit code: 2

ruff failed
  Cause: Failed to parse D:\workspace\indie\userecho\server\pyproject.toml
  Cause: TOML parse error at line 184, column 1
    |
184 | [tool.ruff]
    | ^^^^^^^^^^^
Unknown rule selector: `ASYNC240`

ruff-format..............................................................Failed
- hook id: ruff-format
- duration: 0.05s
- exit code: 2

ruff failed
  Cause: Failed to parse D:\workspace\indie\userecho\server\pyproject.toml
  Cause: TOML parse error at line 184, column 1
    |
184 | [tool.ruff]
    | ^^^^^^^^^^^
Unknown rule selector: `ASYNC240`

mypy.....................................................................Failed
- hook id: mypy
- duration: 1.14s
- exit code: 2

server\backend\app\userecho\service\insight_service.py:366: error: f-string:
f-string: unmatched '['  [syntax]
    {f"2. {suggestions[1]["title"]} - 优先级：{suggestions[1]["estimated_roi"]...
                            ^
Found 1 error in 1 file (errors prevented further checking)

uv-lock..............................................(no files to check)Skipped
- hook id: uv-lock
uv-export............................................(no files to check)Skipped
- hook id: uv-export

exit status 1                                      
  ────────────────────────────────────
summary: (done in 8.39 seconds)       
🥊 backend-linter (8.20 seconds)
